--- a/signin.html
+++ b/signin.html
@@ -35,51 +35,29 @@
 	<body>
 		<h1> Stay in Touch</h1>
 	
-	<table>
 		<form action="login1.php" method="POST">
-			<tr>
-				<td>
 					<label for = "First_Name">First_Name</label>
-					<input id="First_Name" type="text" name="First_Name">
-				</td>
-			</tr>
-			<tr>
-				<td>
+					<input id="First_Name" type="text" name="First_Name"><br>
+			
 					<label for = "Last_Name">Last_Name</label>
-					<input id="Last_Name" type="text" name="Last_Name">
-				</td>
-			</tr>
-			<tr>
-				<td>
+					<input id="Last_Name" type="text" name="Last_Name"><br>
+			
 					<label for = "Email_id">Email_id</label>
-					<input id="Email_id" type="email" name="Email_id">
-				</td>
-			</tr>
-			<tr>
-				<td>
+					<input id="Email_id" type="email" name="Email_id"><br>
+			
 					<label for = "Password">Password</label>
-					<input id="Password" type="password" name="Password">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label for = "Re_Enter_Password">Re-Enter_Password</label>
-					<input id="Re_Enter_Password" type="password" name="Re_Enter_Password">
-				</td>
-			</tr>
-			<tr>
-				<td>
+					<input id="Password" type="password" name="Password"><br>
+			
+					<label for = "Re_Enter_Password">Confirm<br>Password</label>
+					<input id="Re_Enter_Password" type="password" name="Re_Enter_Password"><br>
+			
 					<input type="checkbox" checked="checked" name="remember">
-						<label style="color:white">Remember Me</label>
-				</td>
-			</tr>
-			<tr>
-				<td>
+					<label style="color:white">Remember Me</label>
+		
 					<button class="btn btn-success block" type="submit">Sign In</button>
-				</td>
-			</tr>
+			
 		</form>
-    </table>		
+ 		
 	
 	<!--<div class= "container">
 		<img src="books.jpg" alt="Avatar" class="image" style="width:100%">
@@ -87,5 +65,13 @@
 				<div class="text">ImagesMarket</div>
 			</div>
 	</div>-->
+		<!--JAVASCRIPT-->
+			<!--JQuery-->
+				<script src='https://code.jquery.com/jquery-3.1.0.min.js' integrity='sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=' crossorigin='anonymous'></script>
+				
+			<!--Bootstrap JS-->
+				<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa' crossorigin='anonymous'></script>
+				
+			<!--Custom JS-->
 	</body>
 </html>
