--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<span class='icon-bar'></span>
 						<span class='icon-bar'></span>
 					</button>
-					<a class='navbar-brand' href='home.html'>Images Home</a>
+					<a class='navbar-brand' href='home.html'> Home</a>
 				</header>
 				<div class='collapse navbar-collapse' id='myNavbar'>
 					<ul class='nav navbar-nav'>
