--- a/index.html
+++ b/index.html
@@ -27,31 +27,45 @@
 				<div class="jumbotron">
 					<h1> Images Market </h1><br>
 					<h3>World of Images</h3>
-					<h4> Welcoming you in the universe of images.<br>Offering wide ranges of images along with exciting frames </h4>
+					<h4> Welcoming you in the universe of images.<br>Offering wide ranges of images along with <br><span class='frames'>Exciting frames</span></h4>
 				</div>
 			</div>
 		</header>
+		<img id="pict" src="cofeecup.jpg">
+		<img id="pict1" src="camera.jpg">
+		<img id="pict2" src="food.jpg">
+		<img id="pict3" src="cmr.jpg">
+		<div class="para">
+			<p>Explore Home page</p>
+			<p>
+				<ul>
+					<li>Nature</li>
+					<li>Wildlife</li>
+					<li>Sports</li>
+					<li>Architecture</li>
+					<li>Fashion</li>
+					<li>Food</li>
+					<li>Vehicles</li>
+				</ul>
+			</p>
+		</div>
 		<div class='a'>
-		<nav class='navbar navber-inverse navbar-fixed-top bg-info'>
+		<nav class='navbar navbar-fixed-top bg-info'>
 			<div class='container-fluid'>
 				<header class='navbar-header'>
 					<button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
 						<span class='glyphicon glyphicon-list'></span>
 					</button>
-						<span class='icon-bar'></span>
-						<span class='icon-bar'></span>
-						<span class='icon-bar'></span>
-					</button>
 					<a class='navbar-brand' href='home.html'>Home</a>
 				</header>
 				<div class='collapse navbar-collapse' id='myNavbar'>
 					<ul class='nav navbar-nav'>
-						<li style="font-size:25px; font-family:verdana"><a href='#'>Products</i></a></li>
-						<li style="font-size:25px; font-family:verdana"><a href='#'>Deals</a></li>
+						<li><a href='#'>Products</i></a></li>
+						<li><a href='#'>Deals</a></li>
 					</ul>
 					<ul class='nav navbar-nav navbar-right'>
-						<li style="color:black;font-size:25px; font-family:verdana"><a href='signin.html'><span class='glyphicon glyphicon-user'></span>Sign In</a></li>
-						<li style="font-size:25px; font-family:verdana"><a href='#'><span class='glyphicon glyphicon-shopping-cart'></span>Cart</a></li>
+						<li><a href='signin.html'><span class='glyphicon glyphicon-user'></span>Sign In</a></li>
+						<li><a href='#'><span class='glyphicon glyphicon-shopping-cart'></span>Cart</a></li>
 						<li>
 							<div class="p">
 								<form class='navbar-form' action='#' method='POST'>
@@ -69,12 +83,12 @@
 		<main>
 		
 		</main>
-		<p>	CopyRight &copy; ImagesMarket <br>
-		    Contact Us on: info.imagesmarket.co.in<br>
-			Telephone: 7777700000</p>
+		<p id="pa1">CopyRight &copy; ImagesMarket <br>
+		    <!--Contact Us on: info.imagesmarket.co.in<br>
+			Telephone: 7777700000--></p>
 		<!--FOOTER-->
 			<footer class='text-center'>
-				<nav class='navbar navbar-dark bg-info'>
+				<nav class='navber navbar-dark bg-success'>
 					<div class='container-fluid'>
 						<ul class='nav navbar-nav'>
 							<li><a href='#'><i class='fa fa-facebook'></i></a></li>
